name:           lsupg
version:        0.3.0.2
category:       Utils
synopsis:       list items in a container that can be upgraded
description:
  This package implements a static executable that can be run in containers to
  check for upgrades.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/lsupg-haskell#readme>.

homepage:       https://github.com/ExtremaIS/lsupg-haskell#readme
bug-reports:    https://github.com/ExtremaIS/lsupg-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2021-2024 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  1.24
build-type:     Simple
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.4

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/lsupg-haskell.git

flag static
  description: Pass -static/-pthread to ghc when linking
  default: False

library
  hs-source-dirs: src
  exposed-modules:
      LsUpg
    , LsUpg.Component
    , LsUpg.Component.Apk
    , LsUpg.Component.Apt
    , LsUpg.Component.Dnf
    , LsUpg.Component.Nix
    , LsUpg.Component.Pacman
  other-modules:
      Paths_lsupg
  build-depends:
      aeson >=1.4 && <2.2
    , attoparsec >=0.13 && <0.15
    , base >=4.13 && <5
    , bytestring >=0.10 && <0.12
    , cassava >=0.5 && <0.6
    , directory >=1.3 && <1.4
    , hashable >=1.3 && <1.5
    , template-haskell >=2.15 && <2.20
    , text >=1.2 && <2.1
    , transformers >=0.5 && <0.7
    , ttc >=1.1 && <1.3
    , typed-process >=0.2 && <0.3
    , unordered-containers >=0.2 && <0.3
    , vector >=0.12 && <0.14
    , yaml >=0.11 && < 0.12
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall

executable lsupg
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
      LibOA
  build-depends:
      ansi-wl-pprint >=0.6 && <0.7
    , base
    , optparse-applicative >=0.15 && <0.18
    , lsupg
    , ttc
    , typed-process
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(static)
    ld-options: -static -pthread

test-suite lsupg-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      LsUpg.Component.Apk.Test
    , LsUpg.Component.Apt.Test
    , LsUpg.Component.Dnf.Test
    , LsUpg.Component.Nix.Test
    , LsUpg.Component.Pacman.Test
  build-depends:
      base
    , bytestring
    , lsupg
    , tasty >=1.2 && <1.5
    , tasty-hunit >=0.10 && <0.11
    , text
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
